--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
             <label for="sogan">Soğan 🧅</label>
             <input type="checkbox" name="sogan" id="sogan" value="sogan" class="mlz" />
         </div>
+        
+        <div class="peynir">
+            <label for="peynir">Peynir 🧀</label>
+            <input type="checkbox" name="peynir" id="peynir" value="peynir" class="mlz" />
+          </div>
+          <div class="tursu">
+            <label for="tursu">Turşu 🥒</label>
+            <input type="checkbox" name="tursu" id="tursu" value="tursu" class="mlz" />
+          </div>
         <button class="btn" >sipariş verin canım</button>
     </section>
     <section class="display">sipariş burada gözükecek</section>
